# truce-midi-inspector

./: Cargo.toml  truce.toml
src/: interpret.rs  lib.rs  main.rs  ring.rs
